--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -17,4 +17,4 @@ RUN pip install --no-cache-dir -r requirements.txt
 EXPOSE 8000
 
 # Command to run your application using uvicorn
-CMD ["uvicorn", "--host", "0.0.0.0", "--port", "8000", "--reload", "app:app"]
+CMD ["uvicorn", "--host", "0.0.0.0", "--port", "8000", "--reload", "api.app:app"]
