--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 .venv/ 
+rm314-bb-18.jpg
+rm314-bb-18.eps
+message.txt
+abstract-digital-grid-vector-black-background.zip
+__pycache__/api.cpython-312.pyc
+__pycache__/zipcodes.cpython-312.pyc
+streamlit/__pycache__/zipcodes.cpython-312.pyc
+tmp/users.csv
