--- a/requirements.txt
+++ b/requirements.txt
@@ -1,162 +1,70 @@
-﻿altair==5.2.0
+altair==5.2.0
 annotated-types==0.6.0
 anyio==4.3.0
 asttokens==2.4.1
 attrs==23.2.0
-Automat==22.10.0
-beautifulsoup4==4.12.3
 blinker==1.7.0
-branca==0.7.1
-build==1.0.3
-CacheControl==0.13.1
 cachetools==5.3.2
 certifi==2024.2.2
-cffi==1.16.0
 charset-normalizer==3.3.2
-cleo==2.1.0
 click==8.1.7
 colorama==0.4.6
 comm==0.2.1
-constantly==23.10.4
-contourpy==1.2.0
-crashtest==0.4.1
-cryptography==42.0.2
-cssselect==1.2.0
-cycler==0.12.1
 debugpy==1.8.1
 decorator==5.1.1
-distlib==0.3.8
-dulwich==0.21.7
-entrypoints==0.4
-et-xmlfile==1.1.0
 executing==2.0.1
-Faker==23.3.0
 fastapi==0.110.0
-fastjsonschema==2.19.1
-favicon==0.7.0
-feedfinder2==0.0.4
-feedparser==6.0.11
-filelock==3.13.1
-folium==0.15.1
-fonttools==4.48.1
 gitdb==4.0.11
 GitPython==3.1.42
 h11==0.14.0
-htbuilder==0.6.2
-htmlmin==0.1.12
-httpcore==1.0.2
-httptools==0.6.1
-httpx==0.26.0
-hyperlink==21.0.0
 idna==3.6
-ImageHash==4.3.1
 importlib-metadata==7.0.1
-incremental==22.10.0
-install==1.3.5
-installer==0.7.0
 ipykernel==6.29.2
-ipython==8.22.1
-itemadapter==0.8.0
-itemloaders==1.1.0
-jaraco.classes==3.3.0
+ipython==8.18.1
 jedi==0.19.1
-jieba3k==0.35.1
 Jinja2==3.1.3
-jmespath==1.0.1
-joblib==1.1.0
+joblib==1.3.2
 jsonschema==4.21.1
 jsonschema-specifications==2023.12.1
 jupyter_client==8.6.0
 jupyter_core==5.7.1
-keyring==24.3.0
-kiwisolver==1.4.5
-lxml==5.1.0
-Markdown==3.5.2
 markdown-it-py==3.0.0
-markdownlit==0.0.7
 MarkupSafe==2.1.5
-matplotlib==3.8.2
 matplotlib-inline==0.1.6
 mdurl==0.1.2
-missingno==0.5.2
-more-itertools==10.2.0
-msgpack==1.0.7
-multimethod==1.11
 nest-asyncio==1.6.0
-networkx==3.2.1
-newspaper3k==0.2.8
-nltk==3.8.1
 numpy==1.26.4
-openpyxl==3.1.2
-outcome==1.3.0.post0
 packaging==23.2
 pandas==2.2.1
-pandas-profiling==3.2.0
-parsel==1.8.1
 parso==0.8.3
-pexpect==4.9.0
-phik==0.12.4
 pillow==10.2.0
-pkginfo==1.9.6
 platformdirs==4.2.0
-poetry==1.7.1
-poetry-core==1.8.1
-poetry-plugin-export==1.6.0
-prometheus_client==0.20.0
 prompt-toolkit==3.0.43
-Protego==0.3.0
 protobuf==4.25.3
 psutil==5.9.8
-ptyprocess==0.7.0
 pure-eval==0.2.2
 pyarrow==15.0.0
-pyasn1==0.5.1
-pyasn1-modules==0.3.0
-pycparser==2.21
 pydantic==2.6.2
 pydantic_core==2.16.3
 pydeck==0.8.1b0
-PyDispatcher==2.0.7
 Pygments==2.17.2
-pymdown-extensions==10.7
-pyOpenSSL==24.0.0
-pyparsing==3.1.1
-pyproject_hooks==1.0.0
-PySocks==1.7.1
 python-dateutil==2.8.2
-python-dotenv==1.0.1
 pytz==2024.1
-PyWavelets==1.5.0
-pywin32-ctypes==0.2.2
-PyYAML==6.0.1
 pyzmq==25.1.2
-queuelib==1.6.2
-rapidfuzz==3.6.1
 referencing==0.33.0
-regex==2023.12.25
 requests==2.31.0
-requests-file==1.5.1
-requests-toolbelt==1.0.0
 rich==13.7.0
 rpds-py==0.18.0
 scikit-learn==1.4.1.post1
 scipy==1.12.0
-Scrapy==2.11.0
-seaborn==0.13.2
-selenium==4.17.2
-service-identity==24.1.0
-setuptools==69.0.3
-sgmllib3k==1.0.0
-shellingham==1.5.4
 six==1.16.0
 smmap==5.0.1
 sniffio==1.3.1
-sortedcontainers==2.4.0
-soupsieve==2.5
-st-annotated-text==4.0.1
 stack-data==0.6.3
 starlette==0.36.3
 streamlit==1.31.1
+folium==0.15.1
+streamlit-folium==0.18.0
 streamlit-camera-input-live==0.2.0
 streamlit-card==1.0.0
 streamlit-embedcode==0.1.2
@@ -167,37 +75,19 @@ streamlit-image-coordinates==0.1.6
 streamlit-keyup==0.2.3
 streamlit-toggle-switch==1.0.2
 streamlit-vertical-slider==2.5.5
-tangled-up-in-unicode==0.2.0
 tenacity==8.2.3
 threadpoolctl==3.3.0
-tinysegmenter==0.3
-tldextract==5.1.1
 toml==0.10.2
-tomlkit==0.12.3
 toolz==0.12.1
 tornado==6.4
-tqdm==4.66.1
 traitlets==5.14.1
-trio==0.24.0
-trio-websocket==0.11.1
-trove-classifiers==2024.1.8
-Twisted==22.10.0
-twisted-iocpsupport==1.0.4
 typing_extensions==4.10.0
 tzdata==2024.1
 tzlocal==5.2
 urllib3==2.2.1
 uvicorn==0.27.1
 validators==0.22.0
-virtualenv==20.25.0
-visions==0.7.4
-w3lib==2.1.2
 watchdog==4.0.0
-watchfiles==0.21.0
 wcwidth==0.2.13
-websockets==12.0
-wsproto==1.2.0
 xgboost==2.0.3
-xyzservices==2023.10.1
 zipp==3.17.0
-zope.interface==6.1
